--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,5 @@
 body {
   text-align: center;
-  max-width: 1100px;
-  margin: 0 auto;
 }
 
 h3 {
@@ -19,9 +17,16 @@ h3::after {
 }
 
 .header {
+  background-color: rgba(221, 203, 126, 0.9529411765);
+  min-height: 150px;
+}
+
+.hero {
+  max-width: 800px;
+  margin: 0 auto;
   position: relative;
 }
-.header__icons {
+.hero__icons {
   position: absolute;
   left: 0;
   top: 0;
@@ -29,27 +34,36 @@ h3::after {
   align-items: center;
   justify-content: left;
 }
-.header__icons-link {
-  height: 40px;
+.hero__icons-link {
   margin: 10px 5px;
 }
-
-.about-me__hero {
-  background-color: rgba(221, 203, 126, 0.9529411765);
-  color: black;
+.hero__icons-image {
+  height: 40px;
+  width: 40px;
 }
-.about-me__hero-content {
+.hero__content {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  max-width: 600px;
+  max-width: 800px;
   margin: 0 auto;
 }
-.about-me__image {
-  width: 25%;
-  border-radius: 50%;
-  padding: 20px;
+.hero__image {
+  display: none;
 }
+@media screen and (min-width: 600px) {
+  .hero__image {
+    display: block;
+    width: 20%;
+    height: 20%;
+    border-radius: 50%;
+    padding: 20px;
+  }
+}
+.hero__name {
+  margin-top: 60px;
+}
+
 .about-me__info {
   max-width: 800px;
   margin: 0 auto;
@@ -91,25 +105,42 @@ h3::after {
 }
 
 .course {
-  max-width: -webkit-fit-content;
-  max-width: -moz-fit-content;
-  max-width: fit-content;
+  max-width: 600px;
   margin: 0 auto;
   text-align: center;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 1fr;
   grid-auto-rows: auto;
   gap: 10px;
 }
+@media screen and (min-width: 600px) {
+  .course {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: auto;
+    gap: 10px;
+  }
+}
 .course__item {
-  width: 300px;
   border: 1px solid rgba(221, 203, 126, 0.9529411765);
   border-radius: 5px;
   padding: 10px 20px;
 }
+.course__item-title {
+  position: relative;
+}
+.course__item-title::after {
+  position: absolute;
+  content: " ";
+  height: 1px;
+  width: 100px;
+  background-color: rgba(221, 203, 126, 0.9529411765);
+  top: 25px;
+  left: calc(50% - 50px);
+}
 
 .my-work {
-  max-width: 600px;
+  max-width: 800px;
   margin: 0 auto;
   padding: 10px 20px;
 }
@@ -118,10 +149,20 @@ h3::after {
   max-width: 900px;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: 1fr;
   grid-auto-rows: auto;
   gap: 10px;
   margin-bottom: 10px;
+}
+@media screen and (min-width: 600px) {
+  .portfolio {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media screen and (min-width: 850px) {
+  .portfolio {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 .portfolio__item {
   border-radius: 5px;
@@ -162,4 +203,13 @@ h3::after {
 }
 .contact__item {
   padding: 5px;
+}
+
+.footer {
+  padding: 5px;
+  background-color: rgb(220, 219, 219);
+}
+.footer__link {
+  color: black;
+  text-decoration: none;
 }/*# sourceMappingURL=style.css.map */
