--- a/css/style.css
+++ b/css/style.css
@@ -158,18 +158,14 @@ a:hover {
   margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr;
-  grid-auto-rows: auto;
+  grid-auto-rows: -webkit-max-content;
+  grid-auto-rows: max-content;
   gap: 10px;
   margin-bottom: 10px;
 }
 @media screen and (min-width: 600px) {
   .portfolio {
     grid-template-columns: repeat(2, 1fr);
-  }
-}
-@media screen and (min-width: 850px) {
-  .portfolio {
-    grid-template-columns: repeat(3, 1fr);
   }
 }
 .portfolio__item {
@@ -184,9 +180,12 @@ a:hover {
 }
 .portfolio__image {
   width: 100%;
-  height: 70%;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.info {
+  font-style: italic;
 }
 
 .link {
